# ten_percent_practice

./: .gitignore  README.md
adam_leff/advent_of_code/: day1a.php  day1b.php  day2a.php  day2b.php  day3a.php  day3b.php  day4a.php  day4b.php  day5a.php  day5b.php  day6a.php  day6b.php  day7a.php  day7b.php  day8a.php  day8b.php
adam_leff/bbj/: bbj.php
adam_leff/es6/: 1.js
adam_leff/functional_php/: chap1.php
adam_leff/htdp/: part1.bsl  part2.bsl
angelica_ramirez/: SQL in 10 Minutes  W3HTML
angelica_ramirez/How to Design Programs/: Chapter 1. Fixed-Size Data  Preface  Prologue  readme
angelica_ramirez/Intro to HTML and CSS/: Lesson 1: HTML and Syntax  Lesson 2 Syntax Problem Set  Lesson 3 CSS Syntax  Lesson 4: CSS Syntax Problem Set  readme
chris_larson/apache-poi/: README.md  SampleSS-updated.pptx  build.sbt  slideshow-template.pptx  slideshow.pptx
chris_larson/chatbot/: README.md
chris_larson/htdp/: 4.6.rkt  4.6.rkt~  5.2.rkt  5.2.rkt~  Exercise 101.rkt  Exercise 101.rkt~  Exercise 103.rkt  Exercise 103.rkt~  Exercise 106.rkt  Exercise 106.rkt~  Exercise 107.rkt  Exercise 107.rkt~  Exercise 108.rkt  Exercise 108.rkt~  Exercise 109.rkt  Exercise 109.rkt~  Exercise 110.rkt  Exercise 110.rkt~  Exercise 115.rkt  Exercise 115.rkt~  Exercise 121.rkt  Exercise 121.rkt~  Exercise 129.rkt  Exercise 129.rkt~  Exercise 136.rkt  Exercise 136.rkt~  Exercise 142.rkt  Exercise 142.rkt~  Exercise 147.rkt  Exercise 147.rkt~  Exercise 154.rkt  Exercise 154.rkt~  Exercise 157.rkt  Exercise 157.rkt~  Exercise 159.rkt  Exercise 159.rkt~  Exercise 161.rkt  Exercise 161.rkt~  Exercise 170.rkt  Exercise 171.rkt  (+92 more)
chris_larson/learning-d3/: README.md
chris_larson/learning-scalajs/: .gitignore  Cat.scala  README.md  build.sbt  ch10-1.scala  ch10-2.scala  ch10-3.scala  ch3-1.scala  ch3-2.scala  ch3.scala  ch4-1.scala  ch4-2.scala  ch5-1.scala  ch6-1.scala  ch6-2.scala  ch6-3.scala  ch7-1.scala  ch7-2.scala  ch7-3.scala  ch8-1.scala  ch8-2.scala  ch8-3.scala  ch9-1.scala  date.scala  hello.scala  index.html  package-lock.json  tutorial-app.css
chris_larson/learning-spark/: .gitignore  E1IN64R500NXTW.2017-10-19-12.9c2ba7f3.txt  README.md
chris_larson/prog-scala/: README.md  build.sbt  ch1.scala  work.sc
chris_salch/: CMakeIncludes.txt  CMakeLists.txt  README  setup.sh  testfile
chris_salch/src/: CMakeLists.txt  main.c
cody_koeninger/beautiful-racket/: README.md
cody_koeninger/essential-algorithms/: README.md  build.sbt
cody_koeninger/haskellbook.com/: README.md  ch1.txt  haskellbook.cabal
cody_koeninger/haskellbook.com/addition/: Addition.hs  addition.cabal
cody_koeninger/haskellbook.com/fingerd/: finger.db  fingerd.cabal
cody_koeninger/haskellbook.com/fingerd/src/: Debug.hs  Main.hs  User.hs  Users.hs
cody_koeninger/haskellbook.com/hangman/: codyhangman.cabal  hangman.cabal
cody_koeninger/haskellbook.com/hangman/src/: CodyHangman.hs  Main.hs
cody_koeninger/haskellbook.com/hangman/test/: tests.hs
cody_koeninger/htdp2e/: 10_more_lists.rkt  11_design_composition.rkt  12.1_dictionaries.rkt  12.2_itunes.rkt  12.3_word_games.rkt  12.5_worm.rkt  1_arithmetic.rkt  2_functions.rkt  3.7_pet_worlds.rkt  3_htdp.rkt  4.4_interval.rkt  4.5_itemization.rkt  4.6_design_itemization.rkt  4.7_finite_state.rkt  4_interval_enum.rkt  5.10_editor_v2.rkt  5.11_more_virtual_pets.rkt  5_structure.rkt  6.1_design_itemizations.rkt  6.2_mixing_worlds.rkt  6.3_input_errors.rkt  8_lists.rkt  intermezzo_1.rkt  (+2 more)
doug_steen/: README.md
eric_kudler/: README.md
giancarlo_martinez/: README.md
james_mitchell/: README.md
jarod_belshaw/: build.sbt
justin_nguyen/: notes
ken_snider/: README
lynda_wellhausen/: README.md
siva_bommireddy/: README.md
travis_harsch/: Intro_Interactive_Programming_in_Python
(+2067 files in other folders)
