name: addition
version: 0.1.0
license-file: LICENSE
author: cody
maintainer: cody@koeninger.org
category: Text
build-type: Simple
cabal-version: >=1.10
library
  exposed-modules: Addition
  ghc-options: -Wall -fwarn-tabs
  build-depends: base >=4.7 && <5
               , hspec
  hs-source-dirs: .
  default-language: Haskell2010
