name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options: -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     User
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
                                          
executable debug
  ghc-options: -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
                                
                     
executable fingerd-exe
  ghc-options: -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fingerd
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text

executable users
  ghc-options: -Wall
  hs-source-dirs:      src
  main-is:             Users.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fingerd
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
                     