name:                codyhangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library                     
  hs-source-dirs:
                 src
  ghc-options: -Wall -fwarn-tabs
  build-depends:
                base >= 4.7 && < 5
              , random
              , split
  exposed-modules:
                  CodyHangman
  default-language: Haskell2010

              
executable codyhangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , codyhangman
  default-language: Haskell2010
  other-modules: CodyHangman
                                          
test-suite tests
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs:
      test
  build-depends:
                base >=4.7 && <5
              , QuickCheck
              , codyhangman
  default-language: Haskell2010
